# part-microservice

./: Dockerfile  README.md  docker-compose.yml
app/: api.py  database.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  schemas.py  services.py  settings.py
