[tool.poetry]
name = "part-microservice"
version = "0.1.0"
description = ""
authors = ["Hossein Sokhandan <iamsokhandan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.2"
aerich = "^0.6.2"
tortoise-orm = {extras = ["asyncpg"], version = "^0.18.1"}
fastapi = {extras = ["standard"], version = "^0.72.0"}
uvicorn = "^0.17.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
